--- a/sample.html
+++ b/sample.html
@@ -5,14 +5,18 @@
     <title>Emojie test page</title>
     <script src="emojie.js"></script>
     <script src="emojie-iphone.js"></script>
+    <script src="emojie-typepad.js"></script>
     <script>
-      emojie.path = "assets/iphone/";
+      emojie.path = "assets/iphone";
+      emojieTypepad.path = "assets/typepad"
       window.onload = function() {
         emojie(document.getElementById("emojie"));
-        if (emojie.canRender("\ud83d\ude04")) {
-          document.getElementById("emoji-support").innerText = "yes"
+        emojieTypepad(document.getElementById("emojie-typepad"));
+
+        if (Emojie.canRender("\ud83d\ude04")) {
+          document.getElementById("emoji-support").textContent = "yes"
         } else {
-          document.getElementById("emoji-support").innerText = "no"
+          document.getElementById("emoji-support").textContent = "no"
         }
       }
     </script>
@@ -26,6 +30,7 @@
   <body>
     <p id="native">&#x1F3A4;test&#x1F481;</p>
     <p id="emojie">&#x1F3A4;test&#x1F481;</p>
+    <p id="emojie-typepad">&#x1F3A4;test&#x1F481;</p>
     <p>Can render emoji <span id="emoji-support"></span></p>
   </body>
 </html>
