--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Emojie : Image fallback for emoji" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Emojie by lautis</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Emojie</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Emojie</h1>
+        <p>Image fallback for emoji</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lautis/emojie">View on GitHub</a>
+        <p class="view"><a href="https://github.com/lautis/emojie">View the Project on GitHub <small>lautis/emojie</small></a></p>
 
-          <h1 id="project_title">Emojie</h1>
-          <h2 id="project_tagline">Image fallback for emoji</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lautis/emojie/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lautis/emojie/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/lautis/emojie/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/lautis/emojie/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/lautis/emojie">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <p>JavaScript library which aims to provide fallbacks for Emoji glyphs as images.</p>
 
 <p>Emoji sets:</p>
@@ -65,17 +62,12 @@
 <span class="nt">&lt;/div&gt;</span>
 </pre></div>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Emojie maintained by <a href="https://github.com/lautis">lautis</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/lautis">lautis</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
